fix: get all services method in ProductController
